--- a/client/src/pages/Home/HomePage.css
+++ b/client/src/pages/Home/HomePage.css
@@ -1,162 +1,267 @@
-.hero-2 {
-  position: relative;
+main.main-homePage{
+  padding: 0;
+  margin:0px;
   width: 100%;
-  height: 862px;
-  overflow: hidden;
-  flex-shrink: 0;
-  background-image: url(/public/hero--2@3x.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top;
+  background-color: #FFB700;
+  box-sizing: border-box;
 }
 
-.header-copy-parent {
+.head {
+  text-align: center;
+}
+
+.head h1 {
+  font-size: 12.5em; 
+  margin-bottom: 10px;
+}
+
+.head p {
+  font-size: 1em;
+  color: #555454;
+  padding: 20px 400px;
+  color: black;
+}
+
+.video {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  position: absolute;
-  top: 160px;
-  left: 0;
+  margin-top: 80px;
+}
+
+.video video {
+  width: 900px;
+  border-radius: 20px; 
+}
+
+main .book-appointment{
+  margin-top: 100px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-42xl);
-}
-.book-an-appointment {
-    margin: 0;
-    position: relative;
-    font-size: 70px;
-    line-height: 90px;
+
+  > h3{
+    font-size: 2.5em;
     font-weight: 700;
-    font-family: inherit;
-    display: inline-block;
-    width: 70%;
+    margin: 0px auto 50px;
   }
-  .label {
-    position: relative;
-    font-size: var(--body-body-1-size);
-    line-height: 24px;
-    font-weight: 500;
-    font-family: var(--body-body-1);
-    color: var(--color-darkslategray);
+
+  >p{
+    font-size: 1.5em;
+    padding: 0px 400px;
     text-align: center;
   }
-  .label:hover {
-    color: var(--color-gray-100);
+
+  > div button{
+    width: 200px;
+    height: 40px;
+    background-color: black;
+    color: #FFB700;
+    border-radius: 10px;
+    outline: none;
+    border: none;
+    font-weight: 600;
+    font-size: 0.9em;
   }
-  .button,
-  .header-copy {
+}
+
+main .barber-signup{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin:0px 0px 100px;
+
+  >h6{
+
+    font-size: 8.5em;
+    margin:200px 0px 30px;
+  }
+
+  >p{
+    font-size: 1.1em;
+    padding: 0px 400px;
+    text-align: center;
+  }
+
+  >.textarea{
     display: flex;
-    align-items: center;
-  }
-  .button {
-    cursor: pointer;
-    border: 0;
-    padding: var(--padding-xs) var(--padding-13xl);
-    background-color: rgb(5, 5, 117);
-    border-radius: var(--br-7xs);
     flex-direction: row;
-    justify-content: flex-start;
+    width: 350px;
+    height: 50px;
+    gap: 10px;
+    margin-top: 20px;
+
+    >input{
+      padding: 10px;
+      outline: none;
+      border: 1px solid white;
+      background-color: transparent;
+      border-radius: 5px;
+    }
+
+    >button{
+      outline: none;
+      border: none;
+      background-color: white;
+      border-radius: 5px;
+      width: 100px;
+    }
+  }
+}
+
+
+main .image{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0px;
+  height: 700px;
+  background-image: url('../../../public/bg-image.jpeg');
+  opacity: 0.8;
+  >h6{
     color: white;
-    font-size: 20px;
+    font-size: 5.2em;
+    padding: 300px;
+    text-align: center;
   }
-  .button:hover {
-    background-color: var(--color-gray-200);
-    color: #fff;
-  }
-  .header-copy {
-    overflow: hidden;
+}
+
+main .homePage-salons{
+  display: flex;
+  flex-direction: row;
+  width: 80%;  
+  margin: 150px auto 50px;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+
+  >.homePage-salon {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: var(--gap-13xl);
-    z-index: 0;
-  }
-  .ellipse {
-    position: absolute;
-    top: 1px;
-    left: 120px;
+    align-items: center;
+    text-decoration: none;
+  }  
+}
+.homePage-salon img{
     border-radius: 50%;
-    background-color: var(--default-white);
-    width: 1200px;
-    height: 1200px;
-  }
-  .circle-bg {
-    position: absolute;
-    top: 186.27px;
-    left: 0;
-    width: 1440px;
-    height: 171px;
-  }
-  .woman-hand-holding-iphone-12-m {
-    position: absolute;
-    top: 0;
-    left: 545px;
-    width: 856.13px;
-    height: 757.12px;
-    object-fit: cover;
-  }
-  .circle-bg-parent,
-  .line {
-    position: relative;
-    width: 1440px;
-    height: 757.12px;
-    z-index: 1;
-  }
-  .line {
-    position: absolute;
-    margin: 0 !important;
-    top: 705px;
-    left: 0;
-    background-color: var(--color-whitesmoke-100);
-    height: 1px;
-    z-index: 2;
+    width: 130px;
+    height: 130px;
+}
+.homePage-salon h3{
+  color: black;
+  text-decoration: none;
+}
+
+.more-link {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  transition: background-color 0.3s ease-in-out; 
+
+}
+
+.more-link:hover {
+  color: #0056b3; 
+  font-size: 1.2em;
+}
+
+.more-text {
+  position: absolute;
+  right: 100px;
+}
+
+main .got-questions{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 200px auto 300px;
+  width: 80%;
+
+  >h3{
+    font-size: 2.5em;
+    font-weight: 700;
   }
   
-  .nav-desktop-parent {
-    position: relative;
-    width: 100%;
+  >.questions{
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    text-align: center;
-    font-size: var(--font-size-53xl);
-    color: var(--default-white);
-    font-family: var(--body-body-1);
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+    >.question{
+      width: 24%;
+
+      >h3 {
+        font-size: 1.5em;
+      }
+    }
   }
-  @media screen and (max-width: 1200px) {
-    .book-an-appointment {
-      font-size: var(--font-size-43xl);
+
+}
+
+@media (max-width: 767px) {
+  .head h1 {
+    font-size: 7.5em;
+  }
+  .head p {
+    font-size: 0.9em; 
+    color: #666;
+    padding: 0px 100px;
+  }
+
+  main .video {
+    width: 80%;
+    align-self: center;
+  }  
+
+  main .book-appointment p{
+      font-size: 1.5em;
+      padding: 0px 100px;
+      text-align: center;
+  }
+
+  main .barber-signup{
+    >h6{
+      font-size: 5.1em;
+    }
+  
+    >p{
+      padding: 0px 100px;
+    }
+  }
+
+  main .image{
+    height: 600px;
+    background-image: url('../../../public/bg-image.jpeg');
+    opacity: 0.8;
+    >h6{
+      color: white;
+      font-size: 3.7em;
+      padding: 100px;
       text-align: center;
     }
-    .header-copy {
-      width: auto;
-      align-self: unset;
-      align-items: center;
-      justify-content: center;
-    }
   }
-  @media screen and (max-width: 960px) {
-    .book-an-appointment {
-      font-size: var(--font-size-23xl);
-    }
-    .button {
-      align-items: flex-start;
-      justify-content: flex-start;
-    }
-    .header-copy {
-      flex-direction: column;
-      gap: var(--gap-13xl);
-      align-items: center;
-      justify-content: center;
-    }
+
+
+  main .salons{
+    flex-direction: column;
+    width: 100%;  
+    margin: 100px auto;
+    gap: 50px;
   }
-  @media screen and (max-width: 420px) {
-    .book-an-appointment {
-      font-size: var(--font-size-13xl);
+
+  main .got-questions .questions{
+    display: flex;
+    flex-direction: column;
+
+    >.question{
+      width: 80%;
     }
-    .header-copy {
-      align-items: center;
-      justify-content: center;
-    }
+    
   }
+}
+  
   
