--- a/client/src/pages/Salon/Salon.css
+++ b/client/src/pages/Salon/Salon.css
@@ -1,25 +1,44 @@
-main{
+main.salonPage{
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin: 10px auto;
+    width: 100%;
 }
 
-.services ul{
+main .salon-view{
     display: flex;
-    list-style-type: none;
     flex-direction: row;
-    justify-content: space-around;
+    background-color: rgb(223, 223, 223);
+    width: 80%;
+    margin:20px auto;
+    padding: 20px;
+    border-radius: 10px;
+    gap: 100px;
 }
 
-.service-info{
-    display:flex;
-    flex-direction:row;
-    justify-content: space-between;
+main .salon-view img{
+    width: 700px;
+    height: 450px;
+    border-radius: 10px;
 }
 
-button{
-    width: 250px;
-    font-size: 15px;
+.salon-view-description{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.salon-view-description h3{
+    margin-bottom: 100px;
+}
+
+.salon-view-description .dash{
+    width: 100%;
+    height: 1px;
+    background-color: rgb(124, 124, 124);
+}
+
+.salonPage .salon-services{
+    width: 80% ;
+    margin: auto;
 }
