--- a/client/src/pages/Signup-login/signUp-Login.css
+++ b/client/src/pages/Signup-login/signUp-Login.css
@@ -1,7 +1,7 @@
 .signup-login-parent {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -9,8 +9,10 @@
 }
 
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 767px) {
   .signup-login-parent {
+    width: 100%;
+    height: auto;
     flex-direction: column;
     align-items: center;
   }
