--- a/client/src/components/Salons/Salons.css
+++ b/client/src/components/Salons/Salons.css
@@ -7,11 +7,11 @@
 
 .all-salons ul{
     display: flex;
-    flex-direction: row;
+    gap: 32px;
+    flex-wrap: wrap;
+    align-items: flex-start;
     flex-wrap: wrap;
     list-style-type: none;
-    justify-content: space-around;
-    align-items:center;
     text-decoration: inherit;
 }
 
@@ -21,6 +21,7 @@
     height: 330px;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
+    font-size:  2vh;
 }
 
 .all-salons ul li .salon-name{
